objects/Reference_Key__c.object
<CustomObject>
    <fields>
        <fullName>Created_By__c</fullName>
        <formula>CreatedBy.FirstName + &apos; &apos;+ CreatedBy.LastName + &apos; &apos;+ text(month(datevalue(CreatedDate)))&amp;&quot;/&quot;&amp;text(day(datevalue(CreatedDate)))&amp;&quot;/&quot;&amp;text(year(datevalue(CreatedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DIP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Enter brief description to help you manage and search reference keys</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LOS_ACCOUNT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ACCOUNT</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Partner-Parent Account</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Parent Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Reference Key</relationshipLabel>
        <relationshipName>Reference_Key</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <formula>LastModifiedBy.FirstName + &apos; &apos; + LastModifiedBy.LastName + &apos; &apos; +text(month(datevalue(LastModifiedDate)))&amp;&quot;/&quot;&amp;text(day(datevalue(LastModifiedDate)))&amp;&quot;/&quot;&amp;text(year(datevalue(LastModifiedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Key__c</fullName>
        <externalId>true</externalId>
        <label>Reference Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Ref__c</fullName>
        <formula>IF( End_Date__c &gt;= TODAY() , &apos;Active&apos;, &apos;Expired&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_del__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TIP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VIP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VIP</label>
        <type>Checkbox</type>
    </fields>
    <label>Reference Key</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LOS_ACCOUNT__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status_Ref__c</columns>
        <columns>Created_By__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Reference Key</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reference Key</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>End_date_must_be_greater_than_start_date</fullName>
        <active>true</active>
        <description>End Date must be greater than Start Date</description>
        <errorConditionFormula>Start_Date__c &gt; End_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>End Date must be greater than Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reference_Key_Must_be_unique</fullName>
        <active>true</active>
        <errorConditionFormula>OR(AND(VLOOKUP($ObjectType.Reference_Key__c.Fields.Name, $ObjectType.Reference_Key__c.Fields.Name, Name) = Name, ISNEW()),AND(VLOOKUP($ObjectType.Reference_Key__c.Fields.Name, $ObjectType.Reference_Key__c.Fields.Name, Name) = Name, ISCHANGED(Name)))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>The Reference Key already exists</errorMessage>
    </validationRules>
</CustomObject>